--- a/qrest-example-sql/src/main/resources/application.yml
+++ b/qrest-example-sql/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:;INIT=runscript from 'classpath:/db/schema.sql'
     username: sa
+logging:
+  level:
+    com.querydsl.sql: DEBUG
+    io.qrest.rest.resolver.RsqlPredicateVisitor: DEBUG
