--- a/qrest-example-sql/pom.xml
+++ b/qrest-example-sql/pom.xml
@@ -1,19 +1,21 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>io.qrest</groupId>
-    <artifactId>qrest-parent</artifactId>
-    <version>${revision}</version>
-  </parent>
-  <artifactId>qrest-example-sql</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>io.qrest</groupId>
+		<artifactId>qrest-parent</artifactId>
+		<version>${revision}</version>
+	</parent>
+	<artifactId>qrest-example-sql</artifactId>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
-		    <groupId>io.qrest</groupId>
-		    <artifactId>qrest-rest</artifactId>
-		    <version>${revision}</version>		
+			<groupId>io.qrest</groupId>
+			<artifactId>qrest-rest</artifactId>
+			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -25,8 +27,13 @@
 		</dependency>
 		<dependency>
 			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-core</artifactId>
+			<version>${querydsl5.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-sql-spring</artifactId>
-			<version>${querydsl.version}</version>
+			<version>${querydsl5.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -65,6 +72,10 @@
 					<jdbcUrl>jdbc:h2:mem:;INIT=runscript from
 						'file:${project.baseUri}/src/main/resources/db/schema.sql'</jdbcUrl>
 					<jdbcUser>sa</jdbcUser>
+					<customTypes>
+						<customType>com.querydsl.sql.types.JSR310LocalDateType</customType>
+						<customType>com.querydsl.sql.types.JSR310LocalDateTimeType</customType>
+					</customTypes>
 					<packageName>io.qrest.example.sql.qmodel</packageName>
 					<targetFolder>${project.basedir}/target/generated-sources/java</targetFolder>
 				</configuration>
