--- a/qrest-rest/pom.xml
+++ b/qrest-rest/pom.xml
@@ -29,6 +29,7 @@
 		<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-core</artifactId>
+			<version>${querydsl5.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>cz.jirutka.rsql</groupId>
